--- a/TODO
+++ b/TODO
@@ -128,6 +128,11 @@
 - examples for solve( Cholesky(.), b, system = c("A", "LDLt"....))
   probably rather in man/CHMfactor-class.Rd than man/Cholesky.Rd
 
+- LDL(<CHMsimpl>) looks relatively easy; via  "tCsparse_diag()"
+   {diagonal entries of *triangular* Csparse}
+  --> see comment in determinant(<dsC>) in R/dsCMatrix.R, will give
+  faster determinant
+
 - tr(A %*% B) {and even  tr(A %*% B %*% C) ...} are also needed
   frequently in some computations {conditional normal distr. ...}.
   Since this can be done faster than by
@@ -143,16 +148,6 @@
     "qr.R(<sparse>) may differ from qr.R(<dense>) because of permutations"
 
   This is not really acceptable and currently influences  rcond() as well.
-
-- chol() and qr() generic:  currently have *two* arguments, and give the msg
-
-  >  New generic for "chol" does not agree with implicit generic from package
-  >  "base"; a new generic will be assigned with package "Matrix"
-
-  (and ditto for "qr")
-
-  It was mentioned by an R-core member that he thought it did not make
-  sense to also dispatch on 'tol' or 'pivot' ...  --> maybe change that..
 
 - eigen() should become generic, and get a method at least for diagonal,
   but also for symmetric -> dsyMatrix  [LAPACK dsyev() uses UPLO !],
@@ -174,3 +169,17 @@
   replCmat() uses as_CspClass() and drop0(.) which itself call
   as_CspClass() quite a bit.  --> try to replace these by
   as(*, "CsparseMatrix"); forceSymmetric, etc.
+
+- implement fast diag(<triangularCsparse>) via calling new
+  src/Csparse.c's diag_tC_ptr()
+
+- add examples (and tests!) for update(<CHMfactor>, ..) and
+  Cholesky(......, Imult), also tests for hidden {hence no examples}
+  ldetL2up() { R/CHMfactor.R }
+
+- data(CAex); determinant(CAex) -- says
+  "Ask the package authors to implement the missing feature."
+
+- chol(<nsCMatrix>)  gives "temporarily disabled"
+  but should give the *symbolic* factorization;
+  similarly Cholesky(.) is not enabled
