--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,25 @@
+2008-03-29  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* DESCRIPTION (Version): 0.999375-9 --- need to release
+	for R-devel (and R 2.7.0 alpha soon).
+
+	* R/AllClass.R: drop "double" from "atomicVector" class union
+
+	* R/AllGeneric.R (rcond): check for base::rcond instead of R version
+	* R/dgeMatrix.R: ditto
+
+	* R/sparseMatrix.R (summary): count NAs
+
+	* inst/doc/Intro2Matrix.Rnw: changes, aim for *one* introduction.
+
+2008-03-28  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/AllGeneric.R: rcond(., norm) instead of rcond(., type), in
+	order to become compatible to new R 2.7.0 base::rcond().
+
 2008-03-25  Martin Maechler  <maechler@stat.math.ethz.ch>
 
-	* DESCRIPTION (Version,Date): 0.999375-8
+	* DESCRIPTION (Version,Date): 0.999375-8 --- released to CRAN
 
 	* R/diagMatrix.R (Ops): fix newly introduce bug in <.di> o <numeric>
 
